--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,11 @@
-[tool.ruff]
-line-length = 200
+[project]
+name = "sdsu-cyber-security-red-team"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "paramiko>=3.5.1",
+    "pyyaml>=6.0.2",
+    "requests>=2.32.3",
+]
